k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: javaapp
  name: javaapp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: javaapp
    weight: 100
